<resources>
    <string name="app_name">Shop</string>
    <string name="select_category">Select Category</string>
    <string name="see_more">see more</string>
    <string name="view_all">view all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explorer">Explorer</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">profile</string>
    <string name="my_cart">My Cart</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="buy_now">Buy now!</string>
    <string name="best_seller">Best Seller</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>