<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/filters_top_shadow" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/bt_close"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_rectangle"
                    android:src="@drawable/x"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/filter_options"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/bt_done"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:background="@drawable/button_rectangle"
                    android:text="@string/done"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="2dp"
                android:text="@string/brand"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sp_brand"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/style_filter_spinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:text="@string/price"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sp_price"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/style_filter_spinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:text="@string/size"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sp_size"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/style_filter_spinner" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</FrameLayout>