<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.mainscreen.MainScreenFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/position"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/spinner"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/bt_filter"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/filter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/category_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_line">


            <TextView
                android:id="@+id/tv_select_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/select_category"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textColor="@color/base_orange"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/category_header"
            tools:listitem="@layout/ll_category_active" />


        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_category">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_search"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_weight="0.8"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/search" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/search"
                        android:maxLength="15" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/iv_qr"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.1"
                android:src="@drawable/qr" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hot_sales_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_search">


            <TextView
                android:id="@+id/tv_hot_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_sales"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_hs_see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="@color/base_orange"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_hot_sales"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hot_sales_header">

            <ImageView
                android:id="@+id/iv_hs_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:scaleType="centerCrop"
                tools:src="@drawable/qr" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_new"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/new_circle"
                    app:layout_constraintBottom_toTopOf="@id/ll_titles"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/ll_titles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/bt_buy"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_new">

                    <TextView
                        android:id="@+id/tv_hs_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        tools:text="@string/favorite" />

                    <TextView
                        android:id="@+id/tv_sh_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:text="@string/app_name" />

                </LinearLayout>


                <Button
                    android:id="@+id/bt_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/buy_now"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_titles" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/best_seller_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_hot_sales">


            <TextView
                android:id="@+id/tv_best_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_seller"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_bs_see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="@color/base_orange"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_best_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/best_seller_header"
            tools:listitem="@layout/cv_bs_item_favorite_on" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>


