<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:id="@+id/ll_explorer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/nav_item_padding"
            android:paddingEnd="@dimen/nav_item_padding">

            <ImageView
                android:id="@+id/iv_explorer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:src="@drawable/ellipse" />


            <TextView
                android:id="@+id/tv_explorer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explorer"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/nav_item_padding"
            android:paddingEnd="@dimen/nav_item_padding">

            <ImageView
                android:id="@+id/iv_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:src="@drawable/cart" />


            <TextView
                android:id="@+id/tv_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_cart"
                android:textColor="@color/white"
                android:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/nav_item_padding"
            android:paddingEnd="@dimen/nav_item_padding">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:src="@drawable/favorite" />


            <TextView
                android:id="@+id/tv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:textColor="@color/white"
                android:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/nav_item_padding"
            android:paddingEnd="@dimen/nav_item_padding">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:src="@drawable/profile" />


            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:visibility="gone" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>